# Udemy_Cuda

./: .gitignore  README.md  commands.txt  readme.txt
Code files/Udemy_Cuda_Visual_Studio/: Udemy_Cuda_Visual_Studio.sln
Code_files/Udemy_Cuda_cmake/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/cmake/: code_folders.cmake
Code_files/Udemy_Cuda_cmake/code_folder/Cuda_Read_Values_By_Indexes/: kernel.cu
Code_files/Udemy_Cuda_cmake/code_folder/Cuda_Read_Values_By_Indexes_dummy_main_NO_DLL_FOR_NOW/: CMakeLists.txt  dummy_main.cpp
Code_files/Udemy_Cuda_cmake/code_folder/Cuda_Read_Values_By_Indexes_original/: kernel_original.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section2.2_launch-bounds-2d-b/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/Section2.3_array-add-bug/: array-add-bug.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section2.5_error-handling/: error-handling.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.1_monochrome_aligned/: monochrome.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.3_spotlights/: spotlights.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.3_spotlights-2d/: spotlights-2d.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.4_manylights1_NOT_WORKING/: manylights1.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.4_manylights2/: manylights2.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section3.4_warp/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/Section3.5_manylights-ilp/: manylights-ilp.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section4.1_transpose/: transpose.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section4.2_reduce/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/Section6.1_reduce-stream/: reduce-stream.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section6.2_scan-stream/: scan-stream.cu
Code_files/Udemy_Cuda_cmake/code_folder/Section_2.2_launch-bounds-1d/: launch-bounds-1d.cu
Code_files/Udemy_Cuda_cmake/code_folder/david_001/: kernel.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda/: CMakeLists.txt  main.cpp  main.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda/compare/: cuda.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda/matlab/: script_read_image.asv
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees/compare/: cpu.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees/include/: rotate_90.cuh  utils_custom_matrices.h
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees/matlab/: script_read_image.m
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees/src/: main.cu  rotate_90_cpu.cu  rotate_90_curnel_cpu.cu  utils_custom_matrices.cpp
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees_try_2/include/: rotate_90_cpu.cuh
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_001_rotate_90_degrees_try_2/src/: main.cu  rotate_90_curnel_cpu.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_002_render_circle/: main.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_002_render_circle/src/: main.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_inverse_image/: CMakeLists.txt  main.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_inverse_image/include/: Inverse_cpu.cuh  utils_custom_matrices.h
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_inverse_image/src/: Inverse_cpu.cu  Inverse_curnel_cpu.cu  main.cu  utils_custom_matrices.cpp
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_rotate_90_degrees/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_rotate_90_degrees/include/: CudaMain.cuh
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_003_rotate_90_degrees/src/: rotate_90.cu  rotate_90_curnel.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_004_down_sampling_operator/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_004_down_sampling_operator/include/: ConvertFromInteger_cpu.cuh  DownSampling.cuh  DownSampling_cpu.cuh  fake_cuda_in_cpu.cuh  utils_custom_matrices.h
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_004_down_sampling_operator/src/: ConvertFromInteger.cu  ConvertFromInteger_cpu.cu  ConvertFromInteger_curnel_cpu.cu  CudaMain.cu  DownSampling.cu  DownSampling_curnel.cu  DownSampling_curnel_cpu.cu  fake_cuda_in_cpu.cu  main.cu  utils_custom_matrices.cpp
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_005_optical_blur/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_005_optical_blur/src/: main.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_006_ray_tracing/src/: main_ray_tracing.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_006_ray_tracing_with_const/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_006_ray_tracing_with_const/src/: main_ray_tracing_with_const.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_006_temporal_noise/src/: Inverse_curnel.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_007_ray_tracing_nonconst/src/: main_ray_tracing_nonconst.cu
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_007_threshold_operator/: CMakeLists.txt
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_007_threshold_operator/include/: Inverse.cuh
Code_files/Udemy_Cuda_cmake/code_folder/opencv_cuda_007_threshold_operator/src/: Inverse.cu
Code_files/Udemy_Cuda_cmake/cuda_utils/: Utils_device_cpu.cu
Code_files/Udemy_Cuda_cmake/cuda_utils/include/: ConvertFromInteger.cuh  fake_cuda_in_cpu.cuh  utils_custom_matrices.h
Code_files/Udemy_Cuda_cmake/utils/include/: Utils_device.cu  cuda_utils.cuh  opencv_utils.h
Code_files/Udemy_Cuda_cmake/utils/src/: ConvertFromInteger.cu  ConvertFromInteger_curnel.cu  ConvertFromInteger_curnel_cpu.cu  CudaMain.cu  cuda_utils.cu  opencv_utils.cpp  utils_custom_matrices.cpp
Code_files/cuda_samples_cmake/5_Simulations/oceanFFT/: CMakeLists.txt
Code_files/cuda_samples_cmake/common/: CMakeLists.txt
(+67 files in other folders)
